test/report.expected.txt
FAILED: no actual or expected (0.123ms)

  × [ok] no actual or expected
  └ test.js:1:1

FAILED: actual only (single-line) (0.123ms)

  × [ok] actual only (single-line)
  └ test.js:1:1

  [41m[37m × [39m[49m ACTUAL: "actual only, single-line"

FAILED: actual only (multi-line) (0.123ms)

  × [ok] actual only (multi-line)
  └ test.js:1:1

  [41m[37m × [39m[49m ACTUAL:
      "actual only\n"
      + "multi-line"

FAILED: actual and expected (single-line, same types) (0.123ms)

  × [ok] actual and expected (single-line, same types)
  └ test.js:1:1

  ACTUAL:   "[41m[37mactual[39m[49m, single-line"
  EXPECTED: "[42m[37mexpected[39m[49m, single-line"

FAILED: actual and expected (single-line, different types) (0.123ms)

  × [ok] actual and expected (single-line, different types)
  └ test.js:1:1

  [41m[37m × [39m[49m ACTUAL:   "actual"
  [42m[37m √ [39m[49m EXPECTED: 123

FAILED: actual and expected (multi-line, same types) (0.123ms)

  × [ok] actual and expected (multi-line, same types)
  └ test.js:1:1

      Object {
        "same": true,
  [41m[37m × [39m[49m   "value": "actual\n"
  [42m[37m √ [39m[49m   "value": "expected\n"
        + "multi-line",
      }

FAILED: actual and expected (multi-line, different types) (0.123ms)

  × [ok] actual and expected (multi-line, different types)
  └ test.js:1:1

  [41m[37m × [39m[49m ACTUAL:   "actual"
  [42m[37m √ [39m[49m EXPECTED: Foo { ... }

FAILED: actual and expected (multi-line, additions) (0.123ms)

  × [ok] actual and expected (multi-line, additions)
  └ test.js:1:1

      Array [
        1,
        2,
  [42m[37m √ [39m[49m   3,
      ]

FAILED: actual and expected (multi-line, removals) (0.123ms)

  × [ok] actual and expected (multi-line, removals)
  └ test.js:1:1

      Array [
        1,
        2,
  [41m[37m × [39m[49m   3,
      ]

FAILED: no error (0.123ms)

  × [ok] 
  └ test.js:1:1

FAILED: has error (0.123ms)
  Error: oh no
  /path/to/test/report.ts:77
      "has error": { error: new Error(`oh no`), checks: basicChecks },
                            ^
  
  Error: oh no
      at null.createSampleResults (/path/to/test/report.ts:77:27)
      at null.<anonymous> (/path/to/test/report.ts:128:13)
      at Object.<anonymous> (/path/to/test/report.ts:128:34)
      at Object.v (/path/to/node_modules/@esbuild-kit/cjs-loader/dist/index.js:1:901)
      at async Promise.all (index 0)

  × [ok] 
  └ test.js:1:1

FAILED: unknown error (0.123ms)
  Unknown error:
  Object {
    "oops": "oh no",
  }
  /path/to/test/report.ts:78
      "unknown error": { error: new UnknownError({ oops: "oh no" }), checks: basicChecks },
                                ^
  
  Error: Unknown error type
      at null.createSampleResults (/path/to/test/report.ts:78:31)
      at null.<anonymous> (/path/to/test/report.ts:128:13)
      at Object.<anonymous> (/path/to/test/report.ts:128:34)
      at Object.v (/path/to/node_modules/@esbuild-kit/cjs-loader/dist/index.js:1:901)
      at async Promise.all (index 0)

  × [ok] 
  └ test.js:1:1

FAILED: no details (0.123ms)

  × [ok] 
  └ test.js:1:1

FAILED: one single-line detail (0.123ms)

  × [ok] details, single-line
  └ test.js:1:1

FAILED: multiple lines or details (0.123ms)

  × [ok] 
  └ test.js:1:1
  DETAILS:
  Array [
    "details\n"
    + "multi-line",
    "more details",
  ]

√ PASSED: 0
× FAILED: 15
  TOTAL:  15
